fix(mobile): bottom area sometimes overlaps with safe area

--- a/apps/client/src/stylesheets/style.css
+++ b/apps/client/src/stylesheets/style.css
@@ -63,7 +63,6 @@ body#trilium-app.backdrop-effects-disabled *::after {
 :root {
     --submenu-opening-delay: 300ms;
     --launcher-pane-size: 53px;
-    --mobile-bottom-offset: calc(env(safe-area-inset-bottom) * 0.75);
     --bs-body-color: var(--main-text-color);
 }
 
@@ -89,6 +88,11 @@ body {
     --native-titlebar-darwin-y-offset: 12;
     --launcher-pane-height: 53px;
     --tab-bar-height: 40px;
+    --mobile-bottom-offset: env(safe-area-inset-bottom);
+}
+
+body.ios {
+    --mobile-bottom-offset: calc(env(safe-area-inset-bottom) * 0.25);
 }
 
 body.desktop .mobile-only,
